# FixMiYouShe

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  main.py  pyproject.toml  refresh_data.py  requirements.txt
.gitea/workflows/: docker.yml
src/: __init__.py  app.py  bot.py  env.py  error.py  log.py
src/api/: apk.py  bot_request.py  hoyolab.py  httpxrequest.py  hyperion.py  hyperionrequest.py  i18n.py  models.py
src/core/: bot.py  scheduler.py  web_app.py
src/data/: bg.json  get_bg.py
src/plugins/: inline.py  message.py  start.py
src/render/: article.py  article_hoyolab.py
src/route/: __init__.py  app_download.py  article.py  article_hoyolab.py  base.py  error.py
src/services/: cache.py  scheduler.py
src/templates/: article.jinja2
src/utils/: url.py
tests/: test_app.py  test_get_bg.py  test_hoyolab_article.py  test_mys_article.py  test_url.py
