[project]
name = "FixMiYouShe"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xtaodada", email = "xtao@xtaolink.cn"},
]
dependencies = [
    "httpx>=0.24.1",
    "fastapi>=0.110.0",
    "starlette",
    "uvicorn>=0.23.2",
    "pydantic",
    "python-dotenv",
    "coloredlogs",
    "pytz",
    "apscheduler",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.3",
    "beautifulsoup4",
    "lxml",
    "PyroTgCrypto>=1.2.7",
    "pyrogram @ git+https://github.com/TeamPGM/pyrogram",
    "urlextract",
    "persica @ git+https://github.com/luoshuijs/Persica",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL 3.0+"}

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
